# synthase

./: CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  release-please-config.json  synthase-config.json
.github/workflows/: ci.yml  release-pr.yml  release.yml
action/: README.md  action.yml
action/scripts/: create-releases.sh  publish.sh  release-pr.sh  release.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: changelog.rs  commit.rs  config.rs  error.rs  git.rs  lib.rs  manifest.rs  tag.rs  testutil.rs  updater.rs  version.rs  versioning.rs
crates/core/src/plugin/: cargo_workspace.rs  linked_versions.rs  mod.rs  node_workspace.rs  sentence_case.rs
crates/core/src/strategy/: bazel.rs  dart.rs  elixir.rs  go.rs  helm.rs  java.rs  mod.rs  node.rs  php.rs  python.rs  ruby.rs  rust.rs  simple.rs
crates/core/tests/: integration.rs
docs/: cli.md  configuration.md  conventional-commits.md  ecosystems.md  github-action.md  plugins.md
plans/: synthase-test-plan.md
