[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rustlease-please/rustlease-please"

[workspace.dependencies]
# Core
git2 = { version = "0.19", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
regex = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
glob = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Testing
tempfile = "3"
pretty_assertions = "1"
