[package]
name = "synthase-cli"
version = "0.8.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for synthase automated release management"

[[bin]]
name = "synthase"
path = "src/main.rs"

[dependencies]
synthase = { path = "../core" }
clap = { workspace = true }
serde_json = { workspace = true }
