[package]
name = "synthase"
version = "0.8.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Automated release management using conventional commits"

[dependencies]
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }

[features]
testutil = ["dep:tempfile"]

[dependencies.tempfile]
workspace = true
optional = true

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
synthase = { path = ".", features = ["testutil"] }
